--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section class="container">
             <div class="title">
-                <h2>Reviews</h2>
+                <h2>Reseñas</h2>
                 <div class="underline"></div>
             </div>
             <article class="review">
